--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flatdango - Movie Theater</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
